<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.work.dml.dml2.Emailout">

    <EditText
        android:id="@+id/receiver"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/someone_domain_com"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/send"
        android:layout_marginEnd="14dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="149dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="152dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/send"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:text="@string/send"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="65dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="157dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp" />

    <TextView
        android:id="@+id/texview10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who_would_you_like_to_send_your_responses_to"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/receiver"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="@+id/receiver"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="32dp" />
</android.support.constraint.ConstraintLayout>
