<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.work.dml.dml2.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title1"
        tools:ignore="MissingConstraints"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.504"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp" />

    <EditText
        android:id="@+id/editText"
        style="@style/Base.DialogWindowTitle.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:text=""
        tools:ignore="MissingConstraints"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/butt1"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="136dp"
        android:layout_height="104dp"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="0dp"
        android:text="@string/Q2"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="91dp"
        android:layout_marginTop="308dp"
        android:text="@string/Q5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="91dp"
        android:layout_marginTop="218dp"
        android:text="@string/Q4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginTop="125dp"
        android:text="@string/Q3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="96dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="96dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="45dp"
        tools:layout_editor_absoluteY="45dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="181dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="181dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="380dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="4dp" />

    <Button
        android:id="@+id/butt1"
        android:layout_width="171dp"
        android:layout_height="108dp"
        android:layout_marginBottom="96dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="96dp"
        android:text="@string/Q1"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        app:layout_constraintRight_toLeftOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
