<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.work.dml.dml2.MainActivity3">

    <Button
        android:id="@+id/nextb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="2dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="2dp" />

    <Button
        android:id="@+id/backb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="5dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="196dp"
        android:layout_height="114dp"
        android:text="@string/Q10"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/bot"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/top"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/topleft"
        android:layout_width="88dp"
        android:layout_height="56dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        android:layout_marginTop="137dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="136dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/top"
        android:layout_width="91dp"
        android:layout_height="58dp"
        app:layout_constraintRight_toLeftOf="@+id/rightbot"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toBottomOf="@+id/backb"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button8"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="45dp" />

    <Button
        android:id="@+id/topright"
        android:layout_width="107dp"
        android:layout_height="76dp"
        android:text="@string/Q10a"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="124dp"
        android:layout_marginBottom="129dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/right"
        android:layout_width="82dp"
        android:layout_height="45dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="1dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toTopOf="@+id/button8"
        android:layout_marginRight="1dp"
        tools:layout_editor_absoluteX="301dp" />

    <Button
        android:id="@+id/rightbot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="25dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="124dp"
        android:layout_marginRight="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/rightbot"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="37dp"
        android:id="@+id/bot"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toTopOf="@+id/rightbot"
        android:layout_marginRight="37dp" />

    <Button
        android:id="@+id/leftbot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/left"
        android:layout_width="81dp"
        android:layout_height="49dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button8"
        android:layout_marginLeft="5dp"
        app:layout_constraintVertical_bias="0.507" />
</android.support.constraint.ConstraintLayout>
